--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -37,7 +37,7 @@ title: Contribute.md - make your open source project awesome
         </p>
         <p>
           <strong><em>Open source is for everyone</strong></em><br/>
-          Open source is important because XYZ. However, maintaining a project can be time consuming and all types of help are welcome. 
+          Open source is important. However, maintaining a project can be time consuming and all types of help are welcome.
           Including people with different skillsets to your project will make it even more awesome.
         </p>
         
