add inspired by section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -47,7 +47,22 @@ title: Contribute.md - make your open source project awesome
       <section>
         <h2>Inspired by</h2>
 
-        <p>Add here a few links to good articles about open source as well as existing contribute.md docs.</p>
+        <p>This project was inspired by the following articles and projects around the web.</p>
+
+        <h4>Articles</h4>
+        <ul>
+          <li><a href="http://kennethreitz.com/getting-started-in-open-source.html">Getting Started in Open Source</a></li>
+          <li><a href="http://blog.smartbear.com/software-quality/bid/167051/">14 Ways to Contribute to Open Source without Being a Programming Genius or a Rock Star</a></li>
+        </ul>
+
+        <h4>Projects:</h4>
+        <ul>
+          <li><a href="http://guides.rubyonrails.org/contributing_to_ruby_on_rails.html">Ruby on Rails</a></li>
+          <li><a href="https://github.com/rubygems/rubygems.org/wiki/contribution-guidelines">rubygems.org</a></li>
+          <li><a href="https://github.com/cucumber/cucumber-js/blob/master/CONTRIBUTE.md">cucumber-js</a></li>
+          <li><a href="https://github.com/h5bp/html5-boilerplate/blob/master/doc/contribute.md">html5-boilerplate</a></li>
+          <li><a href="https://github.com/zendframework/zf2-documentation/blob/master/CONTRIBUTE.md">zf2-documentation</a></li>
+        </ul>
       </section>
       
 
